Write markup for header section
the header section html layout

--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,56 @@
 <body>
 
     <header>
+            <div class="img-container">
+                <picture>
+                    <source
+                        media="(width >= 1000px)"
+                        srcset=<%=require("../images/dev_back_shot_landscape_6000w.jpg")%>
+                    >
 
-        <picture>
-            <source
-                media="(width >= 1000px)"
-                srcset=<%=require("../images/dev_back_shot_landscape_6000w.jpg")%>
-            >
+                    <source
+                        media="(width >= 800px)"
+                        srcset=<%=require("../images/dev_back_shot_square_4000w.jpg")%>
+                    >
 
-            <source
-                media="(width >= 800px)"
-                srcset=<%=require("../images/dev_back_shot_square_4000w.jpg")%>
-            >
+                    <img src=<%=require("../images/dev_back_shot_portrait_3000w.jpg")%> alt="">
+                </picture>
 
-            <img src=<%=require("../images/dev_back_shot_portrait_3000w.jpg")%> alt="">
-        </picture>
-        
+                <p class="name" aria-hidden="true">DrearyDev</p>
+            </div>
+
+            <div class="about-me">
+
+                <h1>About Me</h1>
+
+                <p>
+                This is an example page of what a portfoilo might look like. I might decide to use
+                this page as an actual portfoilo in the future, but for now its just practice for
+                learning responsive and accessible web design.
+
+                The photos used are from a photographer named <a href="https://www.pexels.com/@olia-danilevich/" target="_blank" title="Olia Danilevic's pexels account (opens in new tab)">Olia Danilevich</a>
+                and I got the icons from a site called <a href="https://www.pictogrammers.com/library/mdi" target="_blank" title="pictogrammers (opens in new tab)">pictogrammers</a>.
+                Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint
+                consectetur cupidatat.
+                </p>
+
+                <div class="socials">
+                    <!--
+                        I dont have a linkedin or Email so those links are for display only
+                    -->
+                    <a href="https://github.com/DrearyDev/homepage" target="_blank" title="my github profile (opens in new tab)">
+                        <img src=<%=require("../icons/github.svg")%> alt="github">
+                    </a>
+
+                    <a href="#linkedin" target="_blank" title="my linkedin account (opens in new tab)">
+                        <img src=<%=require("../icons/linkedin.svg")%> alt="linkedin">
+                    </a>
+
+                    <a href="#email" target="_blank" title="my email (opens in new tab)">
+                        <img src=<%=require("../icons/email.svg")%> alt="email">
+                    </a>
+                </div>
+            </div>
     </header>
 
     <main>
