Add container for image and about me
and also change the desktop image to a square
instead of a landscape.

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,12 @@
 <body>
 
     <header>
+        <div class="container">
             <div class="img-container">
                 <picture>
                     <source
                         media="(width >= 1000px)"
-                        srcset=<%=require("../images/dev_back_shot_landscape_6000w.jpg")%>
+                        srcset=<%=require("../images/dev_back_shot_square_4000w.jpg")%>
                     >
 
                     <source
@@ -60,6 +61,7 @@
                     </a>
                 </div>
             </div>
+        </div>
     </header>
 
     <main>
